# wingpanel-indicator-maximized-merge

./: LICENSE  README.md  meson.build
src/: BorderRemover.vala  Indicator.vala  XConn.vala
src/Widgets/: DisplayWidget.vala
vapis/: xcb.vapi
